--- a/index.html
+++ b/index.html
@@ -139,46 +139,47 @@
 	<hr>
 
 	<footer>
-		<div class="container">
-			<div class = "row">
-				<div class = "col-sm-2">
-					<h6>Copyright &copy; 2015</h6>
-				
+		<div class = "navbar navbar-inverse navbar-fixed-bottom">
+			<div class="container">
+				<div class = "row">
+					<div class = "col-sm-2">
+						<h6>Copyright &copy; 2015</h6>
+					
+					</div>
+
+					<div class = "col-sm-4">
+						<h6>About Us</h6>
+						<p>SKF has been a leading global technology provider since 1907. Our fundamental strength is the ability to continuously develop new technologies – then use them to create products that offer competitive advantages to our customers.</p>
+					</div>
+
+					<div class = "col-sm-2">
+						<h6>Navigation</h6>
+						<ul class = "unstyled">
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Services</a></li>
+							<li><a href="#">Links</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</div>
+
+					<div class = "col-sm-2">
+						<h6>Follow Us</h6>
+						<ul class = "unstyled">
+							<li><a href="#">Twitter</a></li>
+							<li><a href="#">Facebook</a></li>
+							<li><a href="#">Google Plus</a></li>
+						</ul>
+					</div>
+
+					<div class = "col-sm-2">
+						<h6>Coded with <span class = "glyphicon glyphicon-heart"></span> by SKF-Schweinfurt</h6>
+
+					</div>
+
+
 				</div>
-
-				<div class = "col-sm-4">
-					<h6>About Us</h6>
-					<p>SKF has been a leading global technology provider since 1907. Our fundamental strength is the ability to continuously develop new technologies – then use them to create products that offer competitive advantages to our customers.</p>
-				</div>
-
-				<div class = "col-sm-2">
-					<h6>Navigation</h6>
-					<ul class = "unstyled">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Links</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
-
-				<div class = "col-sm-2">
-					<h6>Follow Us</h6>
-					<ul class = "unstyled">
-						<li><a href="#">Twitter</a></li>
-						<li><a href="#">Facebook</a></li>
-						<li><a href="#">Google Plus</a></li>
-					</ul>
-				</div>
-
-				<div class = "col-sm-2">
-					<h6>Coded with <span class = "glyphicon glyphicon-heart"></span> by SKF-Schweinfurt</h6>
-
-				</div>
-
-
 			</div>
 		</div>
-
 	</footer>
 
 	<div class = "modal fade" id="contact" role = "dialog">
